tests/ui/traits/next-solver-ice.stderr
error[E0277]: the trait bound `f32: From<<T as Iterator>::Item>` is not satisfied
  --> $DIR/next-solver-ice.rs:5:6
   |
LL |     <f32 as From<<T as Iterator>::Item>>::from;
   |      ^^^ the trait `From<<T as Iterator>::Item>` is not implemented for `f32`
   |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | fn check<T: Iterator>() where f32: From<<T as Iterator>::Item> {
   |                         ++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
